# backend_sandbox

./: .gitignore  README.md
src/: Dockerfile  docker-compose.yml
src/c_scripts/: a.out  hello.c
src/dotnet_microservices/: script.cs
src/dotnet_microservices/console_helper/: ConsoleHelper.sln  Dockerfile
src/dotnet_microservices/linqpad_scripts/: AutomationScript.linq  KingdomScripts.linq  SQLiteAutomation.linq  SkillsScripts.linq  TechnologyScripts.linq  automationdb.sqlite
src/dotnet_microservices/postgres_manager/: Dockerfile  GrpcBackendService.sln
src/erlang_scripts/: hello.beam  hello.erl
src/js_scripts/: package-lock.json  package.json
src/js_scripts/nx-space/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
src/lua_scripts/: hello.lua
src/powerhell_scripts/: lesson1.ps1  lesson2.ps1  lesson7.ps1
src/python_scripts/: content.txt  hello_world.py  open_image_in_plotlib.py  pycharm_entry.py
src/rust_scripts/background_worker/: Cargo.toml  example.json  example_scenarios.json  example_scenarios2.json
src/rust_scripts/background_worker/src/: main.rs  steps_monitor.rs  structures.rs
src/rust_scripts/webassembly_worker/: Cargo.toml
src/rust_scripts/webassembly_worker/src/: lib.rs  main.rs
src/sql_scripts/: aoe_ceate_functions.sql  aoe_create.sql  aoe_create_tables.sql  aoe_create_v2.sql  aoe_insert.sql  aoe_insert_records.sql  aoe_insert_v1.sql  course_create.sql  create.sql  create_database_heroes.sql  create_database_postgres.sql  insert.sql  insert_records_postgres.sql  query.sql
src/zig_scripts/: build.zig
(+130 files in other folders)
