[package]
name = "background_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.16"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uuid = { version = "0.8", features = ["serde", "v4"] }